Stop overflow Remove undo button

--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,9 @@ body {
 }
 
 #calcClear {
-  grid-row: 2;
+  grid-row: 3;
   grid-column: 4;
   color: rgb(255, 74, 74);
-}
-
-#calcBack {
-  grid-row: 3;
-  color: rgb(74, 201, 255);
 }
 
 #calcAdd {
